# simulation

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  STRUCTURE.md  default.nix  devenv.nix  devenv.yaml  justfile  main.py  openapi.yaml  orchestrator.py  pyproject.toml  shell.nix
Simulation/: Globals.md  Seasons.md  theveryfirstdraft.md
Simulation/Cells/: Cells.md  Climate.md
agents/: __init__.py  person.py  relation.py
commons/: actions.py  materials.py  noise.py
configuration/: __init__.py  world-module.nix  world.nix
environment/: Spaces.py  biome.py  rainfall.py  spaces.py  tiles.py  visual.py  walkablity.py  winds.py
tests/: test_biome.py  test_relation.py  test_relations.py  test_walkability.py
