[project]
name = "simulation"
version = "0.1.0"
description = "Simulating the world"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "mesa",
    "networkx>=3.6.1",
    "noise>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pygame>=2.6.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = [
    "--ignore=opt",
]
testpaths = [
    "tests"
]
pythonpath = ["."]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mesa = { workspace = true }

[tool.setuptools]
packages = []
